# x/crontask/types/crontask.pb.go
@@ -50,12 +50,16 @@ type Task struct {
 	Msgs []*any.Any `protobuf:"bytes,8,rep,name=msgs,proto3" json:"msgs,omitempty"`
 	// Results of message execution
 	MsgResults []*any.Any `protobuf:"bytes,9,rep,name=msg_results,json=msgResults,proto3" json:"msg_results,omitempty"`
-	// Current status of the task: Scheduled, Done, Failed, Expired
+	// Current status of the task: Scheduled, Pending, Done, Failed, Expired
 	Status string `protobuf:"bytes,10,opt,name=status,proto3" json:"status,omitempty"`
 	// Block timestamp when the task was created
 	CreationTime int64 `protobuf:"varint,11,opt,name=creation_time,json=creationTime,proto3" json:"creation_time,omitempty"`
 	// Error message if task execution failed
 	ErrorLog string `protobuf:"bytes,12,opt,name=error_log,json=errorLog,proto3" json:"error_log,omitempty"`
+	// Actual gas consumed during task execution
+	TaskGasConsumed uint64 `protobuf:"varint,13,opt,name=task_gas_consumed,json=taskGasConsumed,proto3" json:"task_gas_consumed,omitempty"`
+	// Block timestamp when the task was executed (only for DONE / FAILED)
+	ExecutionTimestamp int64 `protobuf:"varint,14,opt,name=execution_timestamp,json=executionTimestamp,proto3" json:"execution_timestamp,omitempty"`
 }
 
 func (m *Task) Reset()         { *m = Task{} }
@@ -175,6 +179,20 @@ func (m *Task) GetErrorLog() string {
 	return ""
 }
 
+func (m *Task) GetTaskGasConsumed() uint64 {
+	if m != nil {
+		return m.TaskGasConsumed
+	}
+	return 0
+}
+
+func (m *Task) GetExecutionTimestamp() int64 {
+	if m != nil {
+		return m.ExecutionTimestamp
+	}
+	return 0
+}
+
 // Params defines the parameters for the crontask module
 type Params struct {
 	// Maximum gas allowed for executing tasks per block
@@ -249,43 +267,46 @@ func init() {
 }
 
 var fileDescriptor_c2a40f3e0e41e1b8 = []byte{
-	// 575 bytes of a gzipped FileDescriptorProto
-	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x53, 0x41, 0x6f, 0xd3, 0x30,
-	0x14, 0x6e, 0xb6, 0xd2, 0xad, 0x6e, 0xc7, 0x86, 0x99, 0x98, 0x37, 0xa4, 0x50, 0x06, 0x42, 0x01,
-	0x41, 0xa2, 0x0e, 0x71, 0xe3, 0xb2, 0x22, 0x0d, 0x81, 0x76, 0x98, 0xb2, 0x9d, 0xb8, 0x44, 0x6e,
-	0xe2, 0x99, 0xa8, 0x71, 0x5c, 0xf9, 0xb9, 0x55, 0x7b, 0xe4, 0x1f, 0xf0, 0x23, 0x38, 0x70, 0xe4,
-	0xc0, 0x8f, 0xd8, 0x71, 0xe2, 0xc4, 0x09, 0xa1, 0xf6, 0xc0, 0xdf, 0x40, 0xb1, 0xd3, 0xac, 0x03,
-	0x09, 0x89, 0x4b, 0xe4, 0xf7, 0x7d, 0xdf, 0x7b, 0x79, 0x7e, 0xdf, 0x33, 0xf2, 0x92, 0x29, 0xc8,
-	0x7c, 0xa8, 0xa4, 0x96, 0xb1, 0xcc, 0x82, 0x58, 0xc9, 0x5c, 0x53, 0x18, 0x04, 0xe3, 0x6e, 0x75,
-	0xf6, 0x0d, 0x8b, 0x77, 0xaf, 0x29, 0xfd, 0x8a, 0x1d, 0x77, 0xf7, 0xb6, 0xb9, 0xe4, 0xd2, 0x30,
-	0x41, 0x71, 0xb2, 0x09, 0x7b, 0xbb, 0xb1, 0x04, 0x21, 0x21, 0xb2, 0x84, 0x0d, 0x4a, 0xca, 0xb5,
-	0x51, 0xd0, 0xa7, 0xc0, 0x82, 0x71, 0xb7, 0xcf, 0x34, 0xed, 0x06, 0xb1, 0x4c, 0xf3, 0xbf, 0xf8,
-	0x7c, 0x50, 0xf1, 0x45, 0x50, 0xf2, 0xb7, 0xa8, 0x48, 0x73, 0x19, 0x98, 0x6f, 0x09, 0xed, 0x94,
-	0x29, 0x02, 0x78, 0xd1, 0xbc, 0x00, 0xbe, 0x68, 0x83, 0x4b, 0xc9, 0x33, 0x16, 0x98, 0xa8, 0x3f,
-	0x3a, 0x0f, 0x68, 0x3e, 0xb5, 0xd4, 0xfe, 0xa7, 0x3a, 0xaa, 0x9f, 0x51, 0x18, 0xe0, 0x1d, 0xb4,
-	0x56, 0xdc, 0x25, 0x4a, 0x13, 0xe2, 0x74, 0x1c, 0xaf, 0x1e, 0x36, 0x8a, 0xf0, 0x4d, 0x82, 0x0f,
-	0xd0, 0x5a, 0xac, 0x18, 0xd5, 0x52, 0x91, 0x95, 0x8e, 0xe3, 0x35, 0x7b, 0xe4, 0xdb, 0xd7, 0x67,
-	0xdb, 0xe5, 0x5d, 0x0e, 0x93, 0x44, 0x31, 0x80, 0x53, 0xad, 0xd2, 0x9c, 0x87, 0x0b, 0x21, 0x0e,
-	0xd0, 0x6d, 0x88, 0xdf, 0xb3, 0x64, 0x94, 0xb1, 0x24, 0xd2, 0xa9, 0x60, 0xa0, 0xa9, 0x18, 0x92,
-	0xd5, 0x8e, 0xe3, 0xad, 0x86, 0xb8, 0xa2, 0xce, 0x16, 0x0c, 0x7e, 0x8c, 0xb6, 0xd8, 0x64, 0x98,
-	0xaa, 0xe9, 0x92, 0xba, 0x6e, 0xd4, 0x9b, 0x16, 0xbf, 0x92, 0x3e, 0x44, 0x37, 0x4d, 0xa3, 0x9c,
-	0x42, 0x94, 0xa5, 0x22, 0xd5, 0xe4, 0x86, 0xe9, 0xb7, 0x5d, 0xa0, 0xaf, 0x29, 0x1c, 0x17, 0x18,
-	0x7e, 0xbb, 0xa4, 0x1a, 0xaa, 0x34, 0x66, 0xa4, 0xd1, 0x71, 0xbc, 0xd6, 0xc1, 0xae, 0x5f, 0x76,
-	0x5e, 0xcc, 0xdd, 0x2f, 0xe7, 0xea, 0xbf, 0x92, 0x69, 0xde, 0x6b, 0x5e, 0xfc, 0xb8, 0x57, 0xfb,
-	0xfc, 0xeb, 0xcb, 0x13, 0xa7, 0xaa, 0x75, 0x52, 0x64, 0xe2, 0x23, 0xd4, 0xae, 0x6a, 0x9d, 0x33,
-	0x46, 0xd6, 0xfe, 0xa3, 0x12, 0x2a, 0x2b, 0x1d, 0x31, 0x86, 0x3d, 0x54, 0x17, 0xc0, 0x81, 0xac,
-	0x77, 0x56, 0xbd, 0xd6, 0xc1, 0xb6, 0x6f, 0x5d, 0xf1, 0x17, 0xae, 0xf8, 0x87, 0xf9, 0x34, 0x34,
-	0x0a, 0xfc, 0x02, 0xb5, 0x04, 0xf0, 0x48, 0x31, 0x18, 0x65, 0x1a, 0x48, 0xf3, 0x1f, 0x09, 0x48,
-	0x00, 0x0f, 0xad, 0x0e, 0xdf, 0x41, 0x0d, 0xd0, 0x54, 0x8f, 0x80, 0xa0, 0xc2, 0xa9, 0xb0, 0x8c,
-	0xf0, 0x03, 0xb4, 0x61, 0x9c, 0x49, 0x65, 0x6e, 0xe6, 0x4b, 0x5a, 0x66, 0xb4, 0xed, 0x05, 0x58,
-	0x0c, 0x17, 0xdf, 0x45, 0x4d, 0xa6, 0x94, 0x54, 0x51, 0x26, 0x39, 0x69, 0x9b, 0xfc, 0x75, 0x03,
-	0x1c, 0x4b, 0xbe, 0xff, 0xc1, 0x41, 0x8d, 0x13, 0xaa, 0xa8, 0x00, 0xfc, 0x08, 0x6d, 0xf6, 0x33,
-	0x19, 0x2f, 0x1b, 0x60, 0x17, 0x66, 0xc3, 0xc0, 0x95, 0x03, 0xf7, 0x51, 0xbb, 0xb4, 0xd4, 0x8a,
-	0x56, 0xcc, 0x3f, 0x5b, 0x16, 0xb3, 0x92, 0xa7, 0x08, 0x0b, 0x3a, 0x89, 0xae, 0xaf, 0x4a, 0xb9,
-	0x25, 0x5b, 0x82, 0x4e, 0x4e, 0x97, 0x17, 0xa5, 0xf7, 0xf2, 0x62, 0xe6, 0x3a, 0x97, 0x33, 0xd7,
-	0xf9, 0x39, 0x73, 0x9d, 0x8f, 0x73, 0xb7, 0x76, 0x39, 0x77, 0x6b, 0xdf, 0xe7, 0x6e, 0xed, 0xdd,
-	0xfe, 0x1f, 0xef, 0x52, 0x8a, 0x60, 0x72, 0xf5, 0x8e, 0xf5, 0x74, 0xc8, 0xa0, 0xdf, 0x30, 0xf4,
-	0xf3, 0xdf, 0x01, 0x00, 0x00, 0xff, 0xff, 0xf1, 0xd8, 0x75, 0x4c, 0xee, 0x03, 0x00, 0x00,
+	// 612 bytes of a gzipped FileDescriptorProto
+	0x1f, 0x8b, 0x08, 0x00, 0x00, 0x00, 0x00, 0x00, 0x02, 0xff, 0x94, 0x54, 0xcd, 0x6e, 0xd3, 0x4c,
+	0x14, 0x8d, 0xdb, 0x34, 0x6d, 0x26, 0xe9, 0xdf, 0x7c, 0xd5, 0xd7, 0x69, 0x91, 0x4c, 0x28, 0x08,
+	0x99, 0x0a, 0x6c, 0xa5, 0x88, 0x1d, 0x9b, 0xb6, 0x52, 0x11, 0xa8, 0x8b, 0x2a, 0xed, 0x8a, 0x8d,
+	0x35, 0xb1, 0xa7, 0x83, 0x55, 0x8f, 0x27, 0x9a, 0xeb, 0x54, 0xc9, 0xb2, 0x6f, 0xc0, 0x63, 0xb0,
+	0x64, 0xc1, 0x43, 0x74, 0x59, 0xb1, 0x62, 0x85, 0x50, 0xb3, 0xe0, 0x35, 0xd0, 0xfc, 0xc4, 0x4d,
+	0x41, 0x42, 0x62, 0x63, 0xcd, 0x3d, 0xe7, 0xdc, 0xeb, 0x3b, 0xf7, 0x5c, 0x1b, 0x05, 0xe9, 0x18,
+	0x64, 0x31, 0x50, 0xb2, 0x94, 0x89, 0xcc, 0xa3, 0x44, 0xc9, 0xa2, 0xa4, 0x70, 0x11, 0x5d, 0x76,
+	0xab, 0x73, 0x68, 0x58, 0xbc, 0x75, 0x4f, 0x19, 0x56, 0xec, 0x65, 0x77, 0x7b, 0x83, 0x4b, 0x2e,
+	0x0d, 0x13, 0xe9, 0x93, 0x4d, 0xd8, 0xde, 0x4a, 0x24, 0x08, 0x09, 0xb1, 0x25, 0x6c, 0xe0, 0x28,
+	0xdf, 0x46, 0x51, 0x9f, 0x02, 0x8b, 0x2e, 0xbb, 0x7d, 0x56, 0xd2, 0x6e, 0x94, 0xc8, 0xac, 0xf8,
+	0x83, 0x2f, 0x2e, 0x2a, 0x5e, 0x07, 0x8e, 0x5f, 0xa7, 0x22, 0x2b, 0x64, 0x64, 0x9e, 0x0e, 0xda,
+	0x74, 0x29, 0x02, 0xb8, 0x6e, 0x5e, 0x00, 0x9f, 0xb6, 0xc1, 0xa5, 0xe4, 0x39, 0x8b, 0x4c, 0xd4,
+	0x1f, 0x9e, 0x47, 0xb4, 0x18, 0x5b, 0x6a, 0xe7, 0x6a, 0x01, 0xd5, 0xcf, 0x28, 0x5c, 0xe0, 0x4d,
+	0xb4, 0xa8, 0xef, 0x12, 0x67, 0x29, 0xf1, 0x3a, 0x5e, 0x50, 0xef, 0x35, 0x74, 0xf8, 0x36, 0xc5,
+	0x7b, 0x68, 0x31, 0x51, 0x8c, 0x96, 0x52, 0x91, 0xb9, 0x8e, 0x17, 0x34, 0x0f, 0xc8, 0xd7, 0x2f,
+	0x2f, 0x36, 0xdc, 0x5d, 0xf6, 0xd3, 0x54, 0x31, 0x80, 0xd3, 0x52, 0x65, 0x05, 0xef, 0x4d, 0x85,
+	0x38, 0x42, 0xff, 0x41, 0xf2, 0x81, 0xa5, 0xc3, 0x9c, 0xa5, 0x71, 0x99, 0x09, 0x06, 0x25, 0x15,
+	0x03, 0x32, 0xdf, 0xf1, 0x82, 0xf9, 0x1e, 0xae, 0xa8, 0xb3, 0x29, 0x83, 0x9f, 0xa1, 0x35, 0x36,
+	0x1a, 0x64, 0x6a, 0x3c, 0xa3, 0xae, 0x1b, 0xf5, 0xaa, 0xc5, 0xef, 0xa4, 0x4f, 0xd0, 0x8a, 0x69,
+	0x94, 0x53, 0x88, 0xf3, 0x4c, 0x64, 0x25, 0x59, 0x30, 0xfd, 0xb6, 0x35, 0xfa, 0x86, 0xc2, 0xb1,
+	0xc6, 0xf0, 0xbb, 0x19, 0xd5, 0x40, 0x65, 0x09, 0x23, 0x8d, 0x8e, 0x17, 0xb4, 0xf6, 0xb6, 0x42,
+	0xd7, 0xb9, 0x9e, 0x7b, 0xe8, 0xe6, 0x1a, 0x1e, 0xca, 0xac, 0x38, 0x68, 0x5e, 0x7f, 0x7f, 0x58,
+	0xfb, 0xf4, 0xf3, 0xf3, 0xae, 0x57, 0xd5, 0x3a, 0xd1, 0x99, 0xf8, 0x08, 0xb5, 0xab, 0x5a, 0xe7,
+	0x8c, 0x91, 0xc5, 0x7f, 0xa8, 0x84, 0x5c, 0xa5, 0x23, 0xc6, 0x70, 0x80, 0xea, 0x02, 0x38, 0x90,
+	0xa5, 0xce, 0x7c, 0xd0, 0xda, 0xdb, 0x08, 0xad, 0x2b, 0xe1, 0xd4, 0x95, 0x70, 0xbf, 0x18, 0xf7,
+	0x8c, 0x02, 0xbf, 0x42, 0x2d, 0x01, 0x3c, 0x56, 0x0c, 0x86, 0x79, 0x09, 0xa4, 0xf9, 0x97, 0x04,
+	0x24, 0x80, 0xf7, 0xac, 0x0e, 0xff, 0x8f, 0x1a, 0x50, 0xd2, 0x72, 0x08, 0x04, 0x69, 0xa7, 0x7a,
+	0x2e, 0xc2, 0x8f, 0xd1, 0xb2, 0x71, 0x26, 0x93, 0x85, 0x99, 0x2f, 0x69, 0x99, 0xd1, 0xb6, 0xa7,
+	0xa0, 0x1e, 0x2e, 0x7e, 0x80, 0x9a, 0x4c, 0x29, 0xa9, 0xe2, 0x5c, 0x72, 0xd2, 0x36, 0xf9, 0x4b,
+	0x06, 0x38, 0x96, 0x1c, 0xef, 0xa2, 0xf5, 0x6a, 0x04, 0x89, 0x2c, 0x60, 0x28, 0x58, 0x4a, 0x96,
+	0xcd, 0xdc, 0x57, 0xdd, 0x0d, 0x0f, 0x1d, 0xac, 0xcd, 0x67, 0x23, 0x96, 0x0c, 0xab, 0xd7, 0x59,
+	0x3b, 0x57, 0xac, 0xf9, 0x15, 0x55, 0x39, 0xba, 0x73, 0xe5, 0xa1, 0xc6, 0x09, 0x55, 0x54, 0x00,
+	0x7e, 0x8a, 0x56, 0xfb, 0xb9, 0x4c, 0x66, 0xdd, 0xb5, 0xdb, 0xb8, 0x6c, 0xe0, 0xca, 0xde, 0x47,
+	0xa8, 0xed, 0xf6, 0xc5, 0x8a, 0xe6, 0x4c, 0xf1, 0x96, 0xc5, 0xac, 0xe4, 0x39, 0xc2, 0x82, 0x8e,
+	0xe2, 0xfb, 0x7b, 0xe8, 0x56, 0x70, 0x4d, 0xd0, 0xd1, 0xe9, 0xec, 0x16, 0x1e, 0xbc, 0xbe, 0xbe,
+	0xf5, 0xbd, 0x9b, 0x5b, 0xdf, 0xfb, 0x71, 0xeb, 0x7b, 0x1f, 0x27, 0x7e, 0xed, 0x66, 0xe2, 0xd7,
+	0xbe, 0x4d, 0xfc, 0xda, 0xfb, 0x9d, 0xdf, 0x3e, 0x7a, 0x29, 0xa2, 0xd1, 0xdd, 0x4f, 0xa2, 0x1c,
+	0x0f, 0x18, 0xf4, 0x1b, 0x86, 0x7e, 0xf9, 0x2b, 0x00, 0x00, 0xff, 0xff, 0x75, 0xc1, 0x15, 0x92,
+	0x4b, 0x04, 0x00, 0x00,
 }
 
 func (m *Task) Marshal() (dAtA []byte, err error) {
@@ -308,6 +329,16 @@ func (m *Task) MarshalToSizedBuffer(dAtA []byte) (int, error) {
 	_ = i
 	var l int
 	_ = l
+	if m.ExecutionTimestamp != 0 {
+		i = encodeVarintCrontask(dAtA, i, uint64(m.ExecutionTimestamp))
+		i--
+		dAtA[i] = 0x70
+	}
+	if m.TaskGasConsumed != 0 {
+		i = encodeVarintCrontask(dAtA, i, uint64(m.TaskGasConsumed))
+		i--
+		dAtA[i] = 0x68
+	}
 	if len(m.ErrorLog) > 0 {
 		i -= len(m.ErrorLog)
 		copy(dAtA[i:], m.ErrorLog)
@@ -502,6 +533,12 @@ func (m *Task) Size() (n int) {
 	l = len(m.ErrorLog)
 	if l > 0 {
 		n += 1 + l + sovCrontask(uint64(l))
+	}
+	if m.TaskGasConsumed != 0 {
+		n += 1 + sovCrontask(uint64(m.TaskGasConsumed))
+	}
+	if m.ExecutionTimestamp != 0 {
+		n += 1 + sovCrontask(uint64(m.ExecutionTimestamp))
 	}
 	return n
 }
@@ -884,6 +921,44 @@ func (m *Task) Unmarshal(dAtA []byte) error {
 			}
 			m.ErrorLog = string(dAtA[iNdEx:postIndex])
 			iNdEx = postIndex
+		case 13:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field TaskGasConsumed", wireType)
+			}
+			m.TaskGasConsumed = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowCrontask
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.TaskGasConsumed |= uint64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
+		case 14:
+			if wireType != 0 {
+				return fmt.Errorf("proto: wrong wireType = %d for field ExecutionTimestamp", wireType)
+			}
+			m.ExecutionTimestamp = 0
+			for shift := uint(0); ; shift += 7 {
+				if shift >= 64 {
+					return ErrIntOverflowCrontask
+				}
+				if iNdEx >= l {
+					return io.ErrUnexpectedEOF
+				}
+				b := dAtA[iNdEx]
+				iNdEx++
+				m.ExecutionTimestamp |= int64(b&0x7F) << shift
+				if b < 0x80 {
+					break
+				}
+			}
 		default:
 			iNdEx = preIndex
 			skippy, err := skipCrontask(dAtA[iNdEx:])
